# minifetch

./: Cargo.toml
src/: main.rs
