[package]
name = "minifetch"
version = "0.1.0"
authors = ["echnobas <echnobas.git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[profile.release.package."*"]
codegen-units = 1

[dependencies]
prettytable-rs = { version = "0.8.0", default-features = false}